src/components/Blanks/styles.scss
@import '../../constants.scss';

.root {
  padding: 0 1rem;
  margin: 0 auto 2rem;
  container-type: inline-size;
  margin: 0 calc(24rem / 16);
  @media (min-width: 75em) {
    margin: 0 calc(48rem / 16);
  }
}

.description {
  display: flex;
  align-items: center;
  gap: calc(12rem / 16);
  :global(path) {
    fill: var(--Secondary-labels);
  }
  :global(svg) {
    min-width: 20px;
  }
  &.desktop-only {
    margin-bottom: calc(32rem / 16);
  }
}

.instructions {
  color: var(--Secondary-labels, #525252);
  font-family: ABCSans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: 120%; /* 19.2px */
  margin: 0;
}
.centre {
  text-align: center;
}
.instructions__mobile-bottom {
  margin: calc(32rem / 16) 0 1rem;
}
.description__mobile-inside {
  margin: calc(28rem / 16) 0 0.5rem;
}
.desktop-only .instructions {
  margin-top: 1rem;
}

.semantic {
  list-style: none;
  margin: 0;
  padding: 0;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  @container (width > 75em) {
    flex-direction: row-reverse;
    justify-content: stretch;
    gap: calc(80rem / 16);
    .containerA {
      flex: 1;
      max-width: min(90vh, 80vw);
    }
    .containerB {
      max-width: calc(457rem / 16);
    }
  }
}

.mobile-only {
  @container (width >= 75em) {
    display: none;
  }
}
.desktop-only {
  @container (width < 75em) {
    display: none;
  }
}

